--- a/style.css
+++ b/style.css
@@ -107,6 +107,26 @@ h2 {
     text-decoration: none;
 }
 
+.exp-item {
+    margin-bottom: 20px;
+}
+.exp-item h3 {
+    font-size: 1.1rem;
+    color: var(--text-color);
+}
+.date {
+    font-size: 0.85rem;
+    color: var(--accent-color);
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+.exp-item ul {
+    margin-left: 20px;
+    font-size: 0.95rem;
+}
+
+
+
 /* Footer */
 footer {
     text-align: center;
